Cascading Change Log

2.2.1 [unreleased]

  Fixed issue where a race condition could cause a NPE between c.c.Cascade#start() and Cascade#stop().

2.2.0

  Fixed issue where c.p.CoGroup in local mode did not properly handle joins where the grouping j.u.Comparator
  did not treat null values as equal. SQL semantics expect null values to not be equivalent. c.p.HashJoin
  does not support non-equality between null and will issue a warning.

  Updated c.p.a.AggregateBy sub-classes to pass 0 as default threshold value to allow the system default value
  to be honored.

  Added c.o.a.MaxValue and c.o.a.MinValue c.o.Aggregator sub-classes to replace c.o.a.Max and c.o.a.Min classes
  respectively. MaxValue and MinValue rely on the values compared to be j.l.Comparable types resulting in a simpler
  implementation and support for max/min of non numeric types.

  Fixed issue where c.o.t.DateParser would drop incoming Tuples if the argument was null.

  Fixed issue where c.t.Hasher was not honored during grouping in local mode.

  Updated c.t.h.GlobHfs to use fewer resources when deriving member identifiers.

  Updated c.t.h.HadoopTapPlatformTest to skip the c.t.h.Dfs test if HDFS filesystem is unavailable on the current
  configuration.

  Fixed issue where c.t.h.Hfs#resourceExists() could fail is the identifier represented a file globing pattern.

  Changed regex j.u.r.Pattern builder methods on c.s.u.DelimitedParser from static to instance methods.

  Updated c.t.TupleEntry to issue a warning if an "unmodifiable" c.t.Tuple is set via #setTuple() on a "modifiable"
  TupleEntry instance. This typically is an indicator the Tuple instance is about to be cached and/or modified at a
  later point. Unmodifiable, system created, Tuples should never be cached.

  Added c.t.TupleEntry#selectInto() to provide a more efficient way to copy values from one c.t.Tuple into another.
